completed scannable swagger file
